testdata/golden/sema/invalid/module_wrong_import/main.sg
pragma module;

import foo/foo;

fn use_value() -> int {
    return 1;
}
